# wasmicro

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
demo/: README.md  app.js  index.html  style.css
examples/: load_safetensors.rs
src/: error.rs  lib.rs  loader.rs  pipeline.rs  quant.rs  tensor.rs  tokenizer.rs  wasm.rs
src/models/: bert.rs  gpt2.rs  mod.rs  t5.rs
src/ops/: activations.rs  attention.rs  elementwise.rs  embedding.rs  layernorm.rs  linear.rs  matmul.rs  mod.rs  quantized.rs  rms_norm.rs  softmax.rs
tests/: bert_roundtrip.rs  public_api.rs
tools/: measure-size.ps1
tools/wasmicro-convert/: Cargo.toml
tools/wasmicro-convert/src/: main.rs
