[package]
name = "wasmicro-convert"
version = "0.2.2"
edition = "2021"
authors = ["Xzdes"]
license = "MIT OR Apache-2.0"
description = "CLI to download and validate HuggingFace transformer models for wasmicro."
publish = false

[[bin]]
name = "wasmicro-convert"
path = "src/main.rs"

[dependencies]
# Local crate reference; downstream consumers won't compile this binary.
wasmicro = { path = "../.." }

# HuggingFace Hub client. Pulls in reqwest + tokio, but this is a CLI tool —
# size doesn't matter here.
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }
